[gd_scene load_steps=7 format=3 uid="uid://b5k1x2qtv32fp"]

[ext_resource type="Texture2D" uid="uid://ch207tdrml3pc" path="res://assets/player/PlayerIdle.png" id="1_8afob"]
[ext_resource type="Script" uid="uid://snbaii3vyb8m" path="res://scripts/player.gd" id="1_dovo2"]

[sub_resource type="AtlasTexture" id="AtlasTexture_dovo2"]
atlas = ExtResource("1_8afob")
region = Rect2(0, 0, 32, 38)

[sub_resource type="SpriteFrames" id="SpriteFrames_gmlin"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dovo2")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_lvxji"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_p47bc"]
size = Vector2(12, 26)

[node name="player" type="CharacterBody2D"]
script = ExtResource("1_dovo2")

[node name="playerSprite" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -19)
sprite_frames = SubResource("SpriteFrames_gmlin")
animation = &"Idle"

[node name="PhysicsCollision" type="CollisionShape2D" parent="."]
position = Vector2(0, -15)
shape = SubResource("CapsuleShape2D_lvxji")

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(1, -14)
shape = SubResource("RectangleShape2D_p47bc")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(2, 2)
limit_left = 0
limit_bottom = 100
limit_smoothed = true

[node name="DebugLabel" type="Label" parent="."]
offset_left = -34.0
offset_top = -93.0
offset_right = 53.0
offset_bottom = -70.0
text = "JumpAvail: 
IsOnFl:"

[node name="CoyoteTimer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[connection signal="timeout" from="CoyoteTimer" to="." method="_on_coyote_timer_timeout"]
